# movies_lib_explorer

./: .gitignore  LICENSE.txt  README.md  TODOs.txt  db.sqlite3  manage.py  pyproject.toml  requirements.txt
catalog/: admin.py  apps.py  permissions.py  serializers.py  throttles.py  urls.py
catalog/config/: config.py
catalog/fixtures/: catalog.json
catalog/forms/: actor_forms.py  director_forms.py  movie_forms.py  settings_forms.py
catalog/import_data/: import_data.py
catalog/migrations/: 0001_initial.py  0002_alter_movie_options_movie_cast_movie_country_and_more.py  0003_movie_title_original.py  0004_alter_movie_runtime.py  0005_actor_alter_director_options_director_picture_and_more.py  0005_director_picture.py  0006_alter_movie_cast_alter_movie_description_and_more.py  0006_movie_cinematography_movie_genres_movie_picture_and_more.py  0006_settings.py  0007_actor.py  0007_alter_movie_year_alter_settings_movies_list_limit_and_more.py  0008_movie_actors.py  0009_alter_movie_actors.py
catalog/models/: actor.py  director.py  movie.py  settings.py
catalog/views/: actor_views.py  director_views.py  load_data_views.py  movie_views.py  settings_views.py
catalog/views_api/: director_views_api.py
config/: config.py
config/aws/: parser.py
extras/curl/: curl_actor_delete.sh  curl_actor_get.sh  curl_actor_get_all.sh  curl_actor_post.sh  curl_actor_put.sh  (+11 more)
home/: urls.py
movies_lib_explorer/: asgi.py  local_settings.py  settings.py  test_settings.py  urls.py  wsgi.py
review/: admin.py  forms.py  urls.py
templates/: 404.html
users/: admin.py  urls.py
(+102 files in other folders)
