[project]
name = "movies-lib-explorer"
version = "0.1.5"
description = "movies-lib-explorer"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django>=4.2.18,<5",
    "django-debug-toolbar>=4.4.6,<5",
    "django-filter>=23.5,<24",
    "django-grappelli>=3.0.9,<4",
    "django-htmx>=1.17.3,<1.18",
    "djangorestframework>=3.15.2,<4",
    "djangorestframework-xml>=2.0.0,<3",
    "pillow>=11.1.0,<12",
    "requests>=2.32.3,<3",
    "xlsxwriter>=3.2.0,<4",
]
